<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CadastroApartamentoActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_qtd_quartos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantidade_de_quartos"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_ocupacao"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/vazio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vazio"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/proprietario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proprietario"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/alugado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alugado"
            android:textSize="16sp" />

    </RadioGroup>

    <!--<android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_prop"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/proprietario"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_tel"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"/>

    </android.support.design.widget.TextInputLayout>-->

    <Button
        android:id="@+id/btn_salvar_apartamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"/>
</LinearLayout>